    reworked to be more user friendly.
  * Added new conaryrc option signatureKeyMap to choose which signature
    to use when signing based on the label.
  * Fixed a bug where conary would only sign the last trove listed,
    instead of signing all troves listed.
  * The ComponentRequires policy now makes :devellib components require
    :data components if they exist.
  * Don't check for bucket conflicts when resolving - if we want to 
    check for bucket conflicts in groups, it will be readded in a more 
    general way.

Changes in 0.62.15:
  * The MakeDevices() policy now accepts mode= as a named argument.
  * Added (undocumented) --debug (prints debugging output), 
    switched old (undocumented) --debug to now be --debugger (starts debugger
    on initialization)
  * Added debug messages to conaryclient/update.py
  * Cloning to the the same branch works (providing a good way of
    reverting changes)
  * Cloning now updates buildRequirements and loadedTroves in troveInfo
    and enforces their consistency on the target branch
  * Cloning groups is now supported
  * Fix update case where a group update should cause conary to search the 
    system for an older version of a trove to replace.
  * If you update a trove foo locally to a new version on the same branch, and 
    then update the containing group to a new version on a different branch,
    conary will now update foo to the new branch as well. 
  * fix error message when you try to pin as non-root

Changes in 0.62.14:
  * The threading changes in .13 caused some error information to be lost.
    Tracebacks have now been fixed, and the download thread checks much more
    often to see if it needs to exit.
  * Catch InstallBucketConflicts exception

Changes in 0.62.13:
  o Repository Server changes
    * The Schema creation SQL statements have been rewritten in a more
      standardized form. Some indexes have been redefined and a number